fixed bug with new business question

--- a/app/views/current/views/abstraction-licence-fail.html
+++ b/app/views/current/views/abstraction-licence-fail.html
@@ -17,7 +17,7 @@
         You cannot apply for a large countryside productivity grant
       </h1>
 
-      <p>Due to the time needed to obtain abstraction licence, only projects that have already been granted an abstraction licence are eligible to apply.</p>
+      <p>Due to the time needed to obtain an abstraction licence, only projects that have already been granted an abstraction licence are eligible to apply.</p>
 
     </div>
   </div>
