--- a/app/views/current/views/check-answers-all.html
+++ b/app/views/current/views/check-answers-all.html
@@ -355,7 +355,7 @@
       </div>
     </dl>
 
-    {% if data['new-business'] == "yes" %}
+    {% if data['new-business'] == "no" %}
     <div class="govuk-inset-text">
         As a new business, you will need to provide additional evidence of your finances in your full application.
     </div>
