--- a/app/views/current/views/check-answers-contact-details.html
+++ b/app/views/current/views/check-answers-contact-details.html
@@ -72,7 +72,7 @@ Check your answers
       </div>
     </dl>
 
-    {% if data['new-business'] == "yes" %}
+    {% if data['new-business'] == "no" %}
     <div class="govuk-inset-text">
         As a new business, you will need to provide additional evidence of your finances in your full application.
     </div>
