Added new version, fixed local routing
Added new version of prototype for latest sprint, fixed issues with local routing files.

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -19,8 +19,13 @@
       </h1>
 
       <dl class="govuk-list">
-        <dt><a href="/current/views/">Version 02</a></dt>
-        <dd>Alpha sprint 5 - large grants service</dd>
+        <dt><a href="/current/views/">Version 03</a></dt>
+        <dd>Alpha sprint 6 - large grants expression of interest v2</dd>
+      </dl>
+
+      <dl class="govuk-list">
+        <dt><a href="/v2/views/">Version 02</a></dt>
+        <dd>Alpha sprint 5 - large grants expression of interest</dd>
       </dl>
 
       <dl class="govuk-list">
