--- a/public/sass/_grants.scss
+++ b/public/sass/_grants.scss
@@ -1,3 +1,10 @@
-.app-task-list__items{
-  margin-left: 0;
+
+
+
+/* Grants styles */
+
+@media (min-width: 40.0625em) {
+  .app-task-list__items {
+    padding-left: 0;
+  }
 }
