--- a/app/views/current/views/water/legal-status.html
+++ b/app/views/current/views/water/legal-status.html
@@ -19,7 +19,7 @@
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                What is the legal status of the {{ data['farming-type'] }} business?
+                What is the legal status of the farm business?
               </h1>
             </legend>
             <div class="govuk-radios">
