--- a/app/views/current/views/water/project-cost.html
+++ b/app/views/current/views/water/project-cost.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block beforeContent %}
-  <a class="govuk-back-link" href="tenancy">Back</a>
+  <a class="govuk-back-link" href="project-items">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -21,7 +21,7 @@
             </label>
           </h1>
           <div id="account-number-hint" class="govuk-hint">
-             Do not include VAT <!--(unless it cannot be recovered)-->
+             Only include the costs of items eligible for grant funding. Do not include VAT.
           </div>
           <span class="govuk-body govuk-!-margin-right-2">£</span> <input class="govuk-input govuk-input--width-10" id="project-cost" name="project-cost" type="text" spellcheck="false" aria-describedby="project-cost-hint" pattern="[0-9]*" inputmode="numeric" value="{{ data['project-cost'] }}">
         </div>
@@ -29,6 +29,24 @@
         <button class="govuk-button" data-module="govuk-button">Continue</button>
 
       </form>
+
+    </div>
+    <div class="govuk-grid-column-one-third">
+
+      <aside class="app-related-items" role="complementary">
+        <h2 class="govuk-heading-m" id="subsection-title">
+          Project items eligible for grant funding
+        </h2>
+        <nav role="navigation" aria-labelledby="subsection-title">
+          <ul class="govuk-list govuk-!-font-size-16">
+            {% for item in data['project-items'] %}
+            <li>
+                {{ item | capitalize }}
+            </li>
+            {% endfor %}
+          </ul>
+        </nav>
+      </aside>
 
     </div>
   </div>
