changed question order and content

--- a/app/views/current/views/water/abstraction-variation.html
+++ b/app/views/current/views/water/abstraction-variation.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Do you need a variation to your current abstraction licence for this project?
+  Does the project need a variation to the current abstraction licence?
 {% endblock %}
 
 {% block beforeContent %}
@@ -19,7 +19,7 @@
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                Do you need a variation to your current abstraction licence for this project?
+                Does the project need a variation to the current abstraction licence?
               </h1>
             </legend>
             <div class="govuk-radios govuk-radios--inline">
@@ -38,17 +38,6 @@
             </div>
           </fieldset>
         </div>
-
-        <details class="govuk-details" data-module="govuk-details">
-          <summary class="govuk-details__summary">
-            <span class="govuk-details__summary-text">
-              Help deciding if you need a variation to your abstraction licence
-            </span>
-          </summary>
-          <div class="govuk-details__text">
-            ...
-          </div>
-        </details>
 
         <button class="govuk-button" data-module="govuk-button">Continue</button>
 
