--- a/app/views/current/views/water/environment.html
+++ b/app/views/current/views/water/environment.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  How will this project improve the environment?
+  How will the project improve the environment?
 {% endblock %}
 
 {% block beforeContent %}
@@ -16,8 +16,8 @@
       <form class="form" action="check-answers-project-benefits" method="post">
 
         <div class="govuk-form-group">
-          <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--m" for="environment">
-              How will this project improve the environment?
+          <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="environment">
+              How will the project improve the environment?
             </label>
           </h1>
           <textarea class="govuk-textarea" id="environment" name="environment" rows="8" aria-describedby="environment-hint">{{ data['environment'] }}</textarea>
