--- a/app/views/current/views/water/farming-type.html
+++ b/app/views/current/views/water/farming-type.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  What type of farming do you do?
+  Does the farm grow arable or horticultural crops?
 {% endblock %}
 
 {% block beforeContent %}
@@ -38,6 +38,17 @@
             </div>
           </fieldset>
         </div>
+
+        <details class="govuk-details" data-module="govuk-details">
+          <summary class="govuk-details__summary">
+            <span class="govuk-details__summary-text">
+              Help with crops
+            </span>
+          </summary>
+          <div class="govuk-details__text">
+            Any farm business that grows one or more crops for food production can apply. Farm businesses that grow crops solely for animal feed or biofuel are not eligible to apply.
+          </div>
+        </details>
 
         <button class="govuk-button" data-module="govuk-button">Continue</button>
 
