--- a/app/views/current/views/water/grant.html
+++ b/app/views/current/views/water/grant.html
@@ -21,7 +21,7 @@ Potential grant funding
 
     <p class="govuk-body">Based on the estimated total project cost of £{{ data['project-cost'] | toFixed(2) | commafy }} you may be able to apply for a grant of up to <strong>£{{ grantAmount | toFixed(2) | commafy }}</strong>.</p>
     <div class="govuk-inset-text  govuk-!-margin-bottom-9">
-      This project is not guaranteed to get a grant.
+      The project is not guaranteed to receive a grant.
     </div>
 
     <form class="form" action="remaining-costs" method="post">
