--- a/app/views/current/views/water/irrigation.html
+++ b/app/views/current/views/water/irrigation.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  How would this project benefit irrigation on the farm?
+  How would the project benefit irrigation on the farm?
 {% endblock %}
 
 {% block beforeContent %}
@@ -19,7 +19,7 @@
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                How would this project benefit irrigation on the farm?
+                How would the project benefit irrigation on the farm?
               </h1>
             </legend>
             <div class="govuk-radios">
