--- a/app/views/current/views/water/productivity.html
+++ b/app/views/current/views/water/productivity.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  How would this project improve productivity?
+  How would the project improve productivity?
 {% endblock %}
 
 {% block beforeContent %}
@@ -17,7 +17,7 @@
 
         <div class="govuk-form-group">
           <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="productivity">
-              How will this project improve productivity?
+              How will the project improve productivity?
             </label>
           </h1>
           <textarea class="govuk-textarea" id="productivity" name="productivity" rows="8" aria-describedby="productivity-hint">{{ data['productivity'] }}</textarea>
