--- a/app/views/current/views/water/tenancy-length-condition.html
+++ b/app/views/current/views/water/tenancy-length-condition.html
@@ -19,7 +19,7 @@
 
       <p>To apply for a grant, you would need to secure an extension to your tenancy agreement prior to submitting a full application.</p>
 
-      <form class="form" action="project-cost" method="post">
+      <form class="form" action="project-items" method="post">
 
         <button class="govuk-button" data-module="govuk-button">Continue</button>
 
