--- a/app/views/current/views/water/tenancy-length.html
+++ b/app/views/current/views/water/tenancy-length.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Does your tenancy extend beyond six years?
+  Is the planned project on land with a tenancy agreement in place until 2026 or after?
 {% endblock %}
 
 {% block beforeContent %}
@@ -19,7 +19,7 @@
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                Does the tenancy last until 2026 or after?
+                Is the planned project on land with a tenancy agreement in place until 2026 or after?
               </h1>
             </legend>
             <div class="govuk-radios govuk-radios--inline">
