--- a/app/views/current/views/water/abstraction-licence.html
+++ b/app/views/current/views/water/abstraction-licence.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Do you have an abstraction licence?
+  Does the project have an abstraction licence?
 {% endblock %}
 
 {% block beforeContent %}
@@ -19,7 +19,7 @@
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                Do you have an abstraction licence?
+                Does the project have an abstraction licence?
               </h1>
             </legend>
             <div class="govuk-radios govuk-radios--inline">
