--- a/app/views/current/views/water/abstraction-variation-condition.html
+++ b/app/views/current/views/water/abstraction-variation-condition.html
@@ -17,7 +17,7 @@
         You may be eligible for a large countryside productivity grant
       </h1>
 
-      <p>To be considered eligible for a large countryside productivity grant scheme, you would need to secure a variation to your abstraction licence prior to submitting a full application.</p>
+      <p>To be considered eligible for a large countryside productivity grant scheme, the project would need to secure a variation to your abstraction licence prior to submitting a full application.</p>
 
       <form class="form" action="check-answers-theme-eligibility" method="post">
 
