--- a/app/views/current/views/water/project-items.html
+++ b/app/views/current/views/water/project-items.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Which items eligible for grant funding are you including in your project?
+  Which items eligible for grant funding are included in the project?
 {% endblock %}
 
 {% block beforeContent %}
@@ -13,25 +13,28 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form class="form" action="grant" method="post">
+      <form class="form" action="project-cost" method="post">
 
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset" aria-describedby="project-items-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                Which items eligible for grant funding are you including in your project?
+                Which items eligible for grant funding are included in the project?
               </h1>
             </legend>
-            <span id="project-items-hint" class="govuk-hint">
+            <!--<span id="project-items-hint" class="govuk-hint">
               Select all that apply
-            </span>
-            <h2 class="govuk-heading-m govuk-!-margin-top-6">Water meter (mandatory unless the project is using an existing metering system)</h2>
+            </span>-->
+            <h2 class="govuk-heading-m govuk-!-margin-top-6">Water metering</h2>
             <div class="govuk-checkboxes" data-module="govuk-checkboxes">
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="project-items" name="project-items" type="checkbox" value="water meter" {{ checked("project-items", "water meter") }}>
+                <input class="govuk-checkboxes__input" id="project-items" name="project-items" type="checkbox" value="water meter" aria-describedby="project-item-hint" {{ checked("project-items", "water meter") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="project-items">
                   Water meter
                 </label>
+                <div id="project-item-hint" class="govuk-hint govuk-checkboxes__hint">
+                  mandatory unless the project is using an existing water metering system
+                </div>
               </div>
               <h2 class="govuk-heading-m govuk-!-margin-top-6">Reservoir construction and infrastructure</h2>
               <div class="govuk-checkboxes__item">
