added slurry and water guidance pages

--- a/app/views/current/views/index.html
+++ b/app/views/current/views/index.html
@@ -26,9 +26,15 @@
   <tbody class="govuk-table__body">
     <tr class="govuk-table__row">
       <td class="govuk-table__cell"><a href="welcome">
-          Expression of interest
+          Water resource management EoI
         </a></td>
-      <td class="govuk-table__cell">Water resource management</td>
+      <td class="govuk-table__cell">Eligibilty and expression of interest</td>
+    </tr>
+    <tr class="govuk-table__row">
+      <td class="govuk-table__cell"><a href="#">
+          Slurry management EoI
+        </a></td>
+      <td class="govuk-table__cell">Eligibilty and expression of interest</td>
     </tr>
   </tbody>
 </table>
@@ -46,34 +52,16 @@
   </thead>
   <tbody class="govuk-table__body">
     <tr class="govuk-table__row">
-      <td class="govuk-table__cell"><a href="start">
-          Start page
+      <td class="govuk-table__cell"><a href="guidance/large-water">
+          Water guidance
         </a></td>
-      <td class="govuk-table__cell">Expression of Interest start page</td>
+      <td class="govuk-table__cell">Guidance page for water grants</td>
     </tr>
     <tr class="govuk-table__row">
-      <td class="govuk-table__cell"><a href="farming-type">
-          Project eligibility
+      <td class="govuk-table__cell"><a href="guidance/large-slurry">
+          Slurry guidance
         </a></td>
-      <td class="govuk-table__cell">Expression of Interest project eligibility</td>
-    </tr>
-    <tr class="govuk-table__row">
-      <td class="govuk-table__cell"><a href="project-items">
-          Theme eligibility
-        </a></td>
-      <td class="govuk-table__cell">Expression of Interest theme eligibility</td>
-    </tr>
-    <tr class="govuk-table__row">
-      <td class="govuk-table__cell"><a href="business">
-          Contact details
-        </a></td>
-      <td class="govuk-table__cell">Expression of Interest contact details</td>
-    </tr>
-    <tr class="govuk-table__row">
-      <td class="govuk-table__cell"><a href="irrigation">
-          Project benefits
-        </a></td>
-      <td class="govuk-table__cell">Expression of Interest project benefits</td>
+      <td class="govuk-table__cell">Guidance page for water grants</td>
     </tr>
     <tr class="govuk-table__row">
       <td class="govuk-table__cell"><a href="task-list">
