--- a/app/views/current/views/water/country-fail.html
+++ b/app/views/current/views/water/country-fail.html
@@ -17,9 +17,9 @@
         You cannot apply for a large countryside productivity grant
       </h1>
 
-      <p>This grant is only open to businesses located in England.</p>
+      <p>This is only for projects in England.</p>
 
-      <p>Farming businesses in Scotland, Wales and Northern Ireland may be eligible for similar grants through their respective domestic schemes.</p>
+      <p>Scotland, Wales and Northern Ireland have similar grants available.</p>
 
       <!--See the <a href="">large countryside productivity grant guidance</a> for further information.</p>-->
 
