--- a/app/views/current/views/water/farming-type-fail.html
+++ b/app/views/current/views/water/farming-type-fail.html
@@ -17,9 +17,7 @@
         You cannot apply for a large countryside productivity grant
       </h1>
 
-      <p>These grants are only available to arable and horticultural farming businesses.</p>
-
-      <p>Other farming businesses may be supported in future schemes.</p>
+      <p>This is only available to arable and horticultural farming businesses that supply the food industry.</p>
 
       <!--See <a href="">the large countryside productivity grant guidance</a> for further information.-->
 
