--- a/app/views/current/views/water/farming-type.html
+++ b/app/views/current/views/water/farming-type.html
@@ -19,7 +19,7 @@
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                Does the farm grow arable or horticultural crops?
+                Does the farm grow crops to supply the food industry?
               </h1>
             </legend>
             <div class="govuk-radios govuk-radios--inline">
@@ -42,11 +42,11 @@
         <details class="govuk-details" data-module="govuk-details">
           <summary class="govuk-details__summary">
             <span class="govuk-details__summary-text">
-              Help with crops
+              Help with food industry
             </span>
           </summary>
           <div class="govuk-details__text">
-            Any farm business that grows one or more crops for food production can apply. Farm businesses that grow crops solely for animal feed or biofuel are not eligible to apply.
+            Does not include crops grown solely for animal feed or biofuel.
           </div>
         </details>
 
