--- a/app/views/current/views/water/legal-status-fail.html
+++ b/app/views/current/views/water/legal-status-fail.html
@@ -17,7 +17,7 @@
         You cannot apply for a large countryside productivity grant
       </h1>
 
-      <p class="govuk-body">This grant is only open to a business with a legal status of:</p>
+      <p class="govuk-body">This is only open to a business with a legal status of:</p>
 
         <ul class="govuk-list govuk-list--bullet">
           <li>Charity</li>
