--- a/app/views/current/views/water/planning-permission-fail.html
+++ b/app/views/current/views/water/planning-permission-fail.html
@@ -17,7 +17,11 @@
         You cannot apply for a large countryside productivity grant
       </h1>
 
-      <p>Planning permission can take a long time to acquire. You can only get a grant if you already have planning permission or expect to get it within six months.</p>
+      <p>This grant is available until DD MMMM YYYY</p>
+
+      <p>Planning permission can take a long time.</p>
+
+      <p>You only get a grant if you already have planning permission or expect to get it before this grant closes.</p>
 
     </div>
   </div>
