--- a/app/views/current/views/water/project-items.html
+++ b/app/views/current/views/water/project-items.html
@@ -19,7 +19,7 @@
           <fieldset class="govuk-fieldset" aria-describedby="project-items-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                Which items eligible for grant funding are included in the project?
+                Which items available through grant funding does the project need?
               </h1>
             </legend>
             <!--<span id="project-items-hint" class="govuk-hint">
@@ -33,7 +33,7 @@
                   Water meter
                 </label>
                 <div id="project-item-hint" class="govuk-hint govuk-checkboxes__hint">
-                  mandatory unless the project is using an existing water metering system
+                  You must have a water meter or be able to use an existing meter for this project.
                 </div>
               </div>
               <h2 class="govuk-heading-m govuk-!-margin-top-6">Reservoir construction and infrastructure</h2>
@@ -108,20 +108,20 @@
               <div class="govuk-checkboxes__item">
                 <input class="govuk-checkboxes__input" id="project-items-13" name="project-items" type="checkbox" value="boom irrigators" {{ checked("project-items", "boom irrigators") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="project-items-13">
-                  Boom irrigators
+                  Boom
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
                 <input class="govuk-checkboxes__input" id="project-items-14" name="project-items" type="checkbox" value="trickle irrigation equipment" {{ checked("project-items", "trickle irrigation equipment") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="project-items-14">
-                  Trickle irrigation equipment
+                  Trickle
                 </label>
               </div>
               <h2 class="govuk-heading-m govuk-!-margin-top-6">Computer software</h2>
               <div class="govuk-checkboxes__item">
                 <input class="govuk-checkboxes__input" id="project-items-15" name="project-items" type="checkbox" value="computer software" {{ checked("project-items", "computer software") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="project-items-15">
-                  Computer software to monitor soil moisture levels and schedule irrigation
+                  Software to monitor soil moisture levels and schedule irrigation
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
