--- a/app/views/current/views/water/remaining-costs-fail.html
+++ b/app/views/current/views/water/remaining-costs-fail.html
@@ -17,7 +17,7 @@
         You cannot apply for a large countryside productivity grant
       </h1>
 
-      <p>Only projects which can pay 60% of the total project costs will be considered for a grant.</p>
+      <p>Only businesses that can pay 60% of the total project cost can apply for this grant.</p>
 
     </div>
   </div>
