--- a/app/views/current/views/water/check-answers-check-you-can-apply.html
+++ b/app/views/current/views/water/check-answers-check-you-can-apply.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block beforeContent %}
-  <a class="govuk-back-link" onclick="history.back()" href="#">Back</a>
+  <a class="govuk-back-link" href="project-start">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -15,9 +15,76 @@
 
     <h1 class="govuk-heading-l">Check your answers</h1>
 
-    <h2 class="govuk-heading-m">Theme eligibility</h2>
+    <h2 class="govuk-heading-m">Check you can apply</h2>
 
     <dl class="govuk-summary-list">
+      <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key govuk-!-width-one-third">
+          Farm grows crops for food
+        </dt>
+        <dd class="govuk-summary-list__value">
+          {{ data['farming-type'] | capitalize }}
+        </dd>
+        <dd class="govuk-summary-list__actions">
+          <a class="govuk-link" href="farming-type">
+            Change<span class="govuk-visually-hidden"> grows crops for food</span>
+          </a>
+        </dd>
+      </div>
+      <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key govuk-!-width-one-third">
+          Legal status
+        </dt>
+        <dd class="govuk-summary-list__value">
+          {{ data['legal-status'] | capitalize }}
+        </dd>
+        <dd class="govuk-summary-list__actions">
+          <a class="govuk-link" href="legal-status">
+            Change<span class="govuk-visually-hidden"> legal status of business</span>
+          </a>
+        </dd>
+      </div>
+      <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key govuk-!-width-one-third">
+          Project in England
+        </dt>
+        <dd class="govuk-summary-list__value">
+          {{ data['country'] | capitalize }}
+        </dd>
+        <dd class="govuk-summary-list__actions">
+          <a class="govuk-link" href="country">
+            Change<span class="govuk-visually-hidden"> in England</span>
+          </a>
+        </dd>
+      </div>
+      <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key govuk-!-width-one-third">
+          Project on own land
+        </dt>
+        <dd class="govuk-summary-list__value">
+          {{ data['tenancy'] | capitalize }}
+        </dd>
+        <dd class="govuk-summary-list__actions">
+          <a class="govuk-link" href="tenancy">
+            Change<span class="govuk-visually-hidden"> on own land</span>
+          </a>
+        </dd>
+      </div>
+      {% if data['tenancy'] == "no" %}
+      <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key govuk-!-width-one-third">
+          Tenancy extends beyond six years
+        </dt>
+        <dd class="govuk-summary-list__value">
+          <p class="govuk-body">{{ data['tenancy-length'] | capitalize }}</p>
+        </dd>
+        <dd class="govuk-summary-list__actions">
+          <a class="govuk-link" href="tenancy-length">
+            Change<span class="govuk-visually-hidden"> tenancy length</span>
+          </a>
+        </dd>
+      </div>
+      {% endif %}
       <div class="govuk-summary-list__row">
         <dt class="govuk-summary-list__key govuk-!-width-one-third">
           Project items
@@ -25,18 +92,7 @@
         <dd class="govuk-summary-list__value">
           <ul class="govuk-list govuk-list--bullet">
             {% for item in data['project-items'] %}
-            {% if item == "water reservoir" %}
-              <li>Water reservoir</li>
-              {% for item in data['reservoir-items'] %}
-              <li style="margin-left:20px; list-style-type:circle;">{{ item | capitalize }}</li>
-              {% endfor %}
-            {% elif item == "reservoir infrastructure" %}
-              <li>Reservoir infrastructure</li>
-              {% for item in data['infrastructure-items'] %}
-              <li style="margin-left:20px; list-style-type:circle;">{{ item | capitalize }}</li>
-              {% endfor %}
-              {% else %}
-              <li>{{ item | capitalize }}</li>{% endif %}
+              <li>{{ item | capitalize }}</li>
             {% endfor %}
           </ul>
         </dd>
@@ -48,27 +104,53 @@
       </div>
       <div class="govuk-summary-list__row">
         <dt class="govuk-summary-list__key govuk-!-width-one-third">
-          Project name
+          Estimated project costs
         </dt>
         <dd class="govuk-summary-list__value">
-          {{ data['project-name'] }}
+          £{{ data['project-cost'] | toFixed(2) | commafy }}
         </dd>
         <dd class="govuk-summary-list__actions">
-          <a class="govuk-link" href="project">
-            Change<span class="govuk-visually-hidden"> project name</span>
+          <a class="govuk-link" href="project-cost">
+            Change<span class="govuk-visually-hidden"> project costs</span>
           </a>
         </dd>
       </div>
       <div class="govuk-summary-list__row">
         <dt class="govuk-summary-list__key govuk-!-width-one-third">
-          Project summary
+          Able to pay remaining costs
         </dt>
         <dd class="govuk-summary-list__value">
-          {{ data['project-summary'] }}
+          {{ data['remaining-costs'] | capitalize }}
         </dd>
         <dd class="govuk-summary-list__actions">
-          <a class="govuk-link" href="project">
-            Change<span class="govuk-visually-hidden"> project summary</span>
+          <a class="govuk-link" href="remaining-costs">
+            Change<span class="govuk-visually-hidden"> remaining costs</span>
+          </a>
+        </dd>
+      </div>
+      <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key govuk-!-width-one-third">
+          Will pay with public money
+        </dt>
+        <dd class="govuk-summary-list__value">
+          {{ data['public-money'] | capitalize }}
+        </dd>
+        <dd class="govuk-summary-list__actions">
+          <a class="govuk-link" href="remaining-costs">
+            Change<span class="govuk-visually-hidden"> public money</span>
+          </a>
+        </dd>
+      </div>
+      <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key govuk-!-width-one-third">
+          Project started
+        </dt>
+        <dd class="govuk-summary-list__value">
+          {{ data['project-start'] | capitalize }}
+        </dd>
+        <dd class="govuk-summary-list__actions">
+          <a class="govuk-link" href="project-start">
+            Change<span class="govuk-visually-hidden"> project started</span>
           </a>
         </dd>
       </div>
@@ -161,11 +243,18 @@
       {% endif %}
     </dl>
 
+    {% if (data['tenancy'] == "yes") and (data['tenancy-length'] == "no") %}
+    <div class="govuk-inset-text">
+        To make a full application, you will need to extend your tenancy beyond 2026.
+    </div>
+    {% endif %}
+
     {% if (data['abstraction-licence'] == "yes") and (data['abstraction-variation'] == "yes") %}
     <div class="govuk-inset-text">
         You will need to secure a variation to your abstraction licence prior to submitting a full application.
     </div>
     {% endif %}
+
 
     <form action="task-list" method="post" novalidate>
 
