--- a/app/views/current/views/water/planning-required-condition.html
+++ b/app/views/current/views/water/planning-required-condition.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block beforeContent %}
-  <a class="govuk-back-link" href="tenancy-length">Back</a>
+  <a class="govuk-back-link" href="planning-required">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -17,9 +17,11 @@
         You may be able to apply for a large countryside productivity grant
       </h1>
 
-      <p>You will need to extend your tenancy agreement before you can complete a full application.</p>
+      <p>Check with your local planning authority</p>
 
-      <form class="form" action="project-items" method="post">
+      <p>Find out if you need planning permission for your project and start the process as soon as possible. Planning applications can take years.</p>
+
+      <form class="form" action="abstraction-required" method="post">
 
         <button class="govuk-button" data-module="govuk-button">Continue</button>
 
