--- a/app/views/current/views/water/start.html
+++ b/app/views/current/views/water/start.html
@@ -1,65 +1,65 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  {{ serviceName }}
+{{ serviceName }}
 {% endblock %}
 
 {% block header %}
-  <!-- Blank header with no service name for the start page -->
-  {{ govukHeader() }}
+<!-- Blank header with no service name for the start page -->
+{{ govukHeader() }}
 {% endblock %}
 
 {% block beforeContent %}
-  <div class="govuk-breadcrumbs">
-    <ol class="govuk-breadcrumbs__list">
-      <li class="govuk-breadcrumbs__list-item">
-        <a class="govuk-breadcrumbs__link" href="https://www.gov.uk">Home</a>
-      </li>
-      <li class="govuk-breadcrumbs__list-item">
-        <a class="govuk-breadcrumbs__link">{{ serviceName }}</a>
-      </li>
-    </ol>
-  </div>
+<div class="govuk-breadcrumbs">
+  <ol class="govuk-breadcrumbs__list">
+    <li class="govuk-breadcrumbs__list-item">
+      <a class="govuk-breadcrumbs__link" href="https://www.gov.uk">Home</a>
+    </li>
+    <li class="govuk-breadcrumbs__list-item">
+      <a class="govuk-breadcrumbs__link">{{ serviceName }}</a>
+    </li>
+  </ol>
+</div>
 {% endblock %}
 
 {% block content %}
-  <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-two-thirds">
 
-      <h1 class="govuk-heading-l">
-        {% if serviceName %} {{ serviceName }} {% endif %}
-      </h1>
+    <h1 class="govuk-heading-l">
+      {% if serviceName %} {{ serviceName }} {% endif %}
+    </h1>
 
-      <p>Use this service to:</p>
+    <p>Use this service to:</p>
 
-      <ul class="govuk-list govuk-list--bullet">
-        <li>find out if you can apply for a large grant for a specific project</li>
-        <li>send an expression of interest</li>
-        <li>see if a full grant application is likely to be successful or not</li>
-      </ul>
+    <ul class="govuk-list govuk-list--bullet">
+      <li>find out if you can apply for a large grant for your project (takes about 10 minutes).</li>
+      <li>write and send an expression of interest (takes about 30 minutes if you have all the project details)</li>
+    </ul>
 
-      <p>Completing the eligibility check and expression of interest takes around XX minutes.</p>
+    <p>You will not automatically get a grant. You are competing against other projects.</p>
 
-      <a href="farming-type" role="button" draggable="false" class="govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8"  data-module="govuk-button">
-        Start now
-        <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" role="presentation" focusable="false">
-          <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z"></path>
-        </svg>
-      </a>
+    <p>If your project fits the priorities and provides value for taxpayers' money, you may be invited to make a full application. It can take up to a month for the Rural Payments Agency to assess all projects.
+    </p>
 
-      <h2 class="govuk-heading-m">Before you start</h2>
+    <a href="farming-type" role="button" draggable="false" class="govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8" data-module="govuk-button">
+      Start now
+      <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" role="presentation" focusable="false">
+        <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z"></path>
+      </svg>
+    </a>
 
-      <p>You need:</p>
-      <ul class="govuk-list govuk-list--bullet">
-      <li>an estimate of the project cost</li>
-      <li>a clear understanding of the project benefits</li>
-      </ul>
+    <h2 class="govuk-heading-m">Before you start</h2>
 
-      <p>You can also download and complete a <a href="">countryside productivity large grant application form</a>.</p>
+    <p>You need:</p>
+    <ul class="govuk-list govuk-list--bullet">
+      <li>a list of the items you need for the project</li>
+      <li>an estimate of the total cost of the items that could get a grant</li>
+    </ul>
 
-    </div>
+  </div>
 
-    <!--<div class="govuk-grid-column-one-third">
+  <!--<div class="govuk-grid-column-one-third">
 
       <aside class="app-related-items" role="complementary">
         <h2 class="govuk-heading-m" id="subsection-title">
@@ -87,5 +87,5 @@
       </aside>
 
     </div>-->
-  </div>
+</div>
 {% endblock %}
